2.0b-snapshot:
incompatible changes:
- backup.moderated is gone.
- the fqdn option is gone. Use hostname instead.
- Fix: timeout_active is back!
  This can cause "cannot stat /var/spool/news/leaf.node/:active.read: No
  such file or directory" to be logged until leafnode has succeeded to
  issue "LIST" on all its upstream servers. This message is harmless.
- IMPORTANT: leafnode now automatically appends "leafnode" to your
  sysconfdir. For backwards compatibility, ./configure will strip a
  trailing "/leafnode" or "/leafnode/" so you don't end up with your
  configuration in /etc/leafnode/leafnode/config.
- The "dontpost" configuration option is replaced by "feedtype=none".
- Debug logging to syslog and console is now only enabled if the
  debugmode figure is odd (1, 3, 5, ...), to cut down the size of
  logging in verbose mode somewhat.
- fetchnews now compares the local clock to the server's clock if the
  server supports the DATE command and complains if the two are more
  than 10 minutes apart.
- leafnode now resolves conflicts between a group name and the same name
  that only differs in upper vs. lower case, it prefers the lower-case
  version.

other changes:
- fix portability to Solaris 8 (both SunPro 6 and gcc 2.95).
- kill temp.files links for local posts, reported by Robert Marshall.
- signal handling fixes.
- fixed the timeout-goes-unnoticed bug, thanks to Richard van der Hoff.
- tries to fix the infamous "unsigned -1" corruption in groupinfo.
- build toolchain updated to automake 1.7.1/autoconf 2.54
- forward-port of only_groups_pcre option from leafnode-1.
- articles that are mailed to the moderator that don't already have a To:
  header line now get the To: header appended.
- no longer installs the "lsort" program. You can remove it from
  /usr/local/sbin/lsort
- fetchnews now logs how many articles could be filtered from pseudo
  headers generated from XOVER data already. Look for "group.name: XOVER
  N to get, M filtered" lines.