@@ -4,21 +4,10 @@
 #include "config.h"
 #include "groupselect.h"
 #include "ln_log.h"
+#include "pcrewrap.h"
 
-pcre *gs_compile(const char *regex) {
-    const char *regex_errmsg;
-    int regex_errpos;
-    pcre *e;
-
-    if ((e = pcre_compile(regex, PCRE_MULTILINE, &regex_errmsg, &regex_errpos
-#ifdef NEW_PCRE_COMPILE
-		    , NULL
-#endif
-		    )) == NULL) {
-	ln_log(LNLOG_SERR, LNLOG_CTOP, "Invalid group pattern "
-		"in \"%s\" at char #%d: %s", regex, regex_errpos, regex_errmsg);
-    }
-    return e;
+pcre *gs_compile(const char *regex, const char *file, unsigned long line) {
+    return ln_pcre_compile(regex, PCRE_MULTILINE, NULL, file, line);
 }
 
 /* match s against PCRE p
@@ -27,11 +16,7 @@ pcre *gs_compile(const char *regex) {
 int gs_match(const pcre *p, const char *s) {
     int match;
     if (p == NULL) return 1;
-    match = pcre_exec(p, NULL, s, strlen(s),
-#ifdef NEW_PCRE_EXEC
-	    0,
-#endif
-	    PCRE_ANCHORED, NULL, 0);
+    match = pcre_exec(p, NULL, s, strlen(s), 0, PCRE_ANCHORED, NULL, 0);
 
     if (match == PCRE_ERROR_NOMATCH) return 0;
     if (match >= 0) return 1;
