@@ -4,7 +4,7 @@
 /* for pcre type */
 #include <pcre.h>
 
-pcre *gs_compile(const char *regex);
+pcre *gs_compile(const char *regex, const char *file, unsigned long line);
 int gs_match(const pcre *p, const char *s);
 
 #endif
